--- a/index.html
+++ b/index.html
@@ -1,42 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Heyyy</title>
+    <title>Hi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css"> -->
-    <!-- <script src="main.js"></script> -->
     <style>
-    #screen {
-        background-color: yellow;
-        height: 100vh;
-        width: 100vw;
+        html {
+            background-color: teal;
+        }
 
-    }
-
-    h1{
-        text-align: center;
-        margin-top: 40vh;
-        font-size: 90px;
-    }
-
-    .word-1{
-        text-transform: uppercase;
-        color: rgb(74, 144, 226);
-        font-family: Helvetica, sans-serif;
-    }
-
-    .word-2 {
-        color: #BC1919;
-        font-family: Avenir, sans-serif;
-    }
+        h1 {
+            text-align: center;
+            margin-top: 40vh;
+            font-size: 90px;
+            color:purple;
+            font-family: Helvetica, sans-serif;
+        }   
     </style>
 </head>
-<body id='screen'>
-    <h1>
-        <span class="word-1">Hello</span>
-        <span class="word-2">world</span>
-    </h1>
+
+<body>
+    <h1>Hello World</h1>
 </body>
+
 </html>
